<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.profilescreen.ProfileFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="@dimen/_12sdp"
        android:text="@string/account_overview"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@drawable/curved_border_background"
        android:orientation="vertical"
        android:paddingBottom="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:paddingLeft="5sp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/oval_background"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Oval"
                app:srcCompat="@drawable/inside_profile_icon" />
            <!--        <ImageView-->
            <!--            android:background="@drawable/inside_profile_icon"-->
            <!--            android:layout_width="45sp"-->
            <!--            android:layout_height="45sp"-->
            <!--            android:padding="15sp"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:paddingTop="8sp"
                android:text="ahmed algendy"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="10sp"
                android:text="Email : "
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:text="agendy@gendy.com"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@drawable/curved_border_background"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/favorite_movies"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movies_profile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_6sdp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_8sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/profile_movie_item" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@drawable/curved_border_background"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/favorite_series"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_series_profile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_6sdp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_8sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/profile_movie_item" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@drawable/signout_btn_curved_border_background"
            android:text="Sign out"
            android:textColor="@color/white" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete_my_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@drawable/delete_account_btn_curved_border_background"
            android:text="Delete Account"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>